add instagas first docs

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -85,12 +85,12 @@
 
 .row {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr; /* 1fr */
   grid-gap: 16px;
   justify-content: center;
   margin: 0 auto;
   padding: 1rem 0;
-  max-width: 960px;
+  max-width: 900px;  /* 1260px */
 }
 
 .title {
