--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -11,7 +11,7 @@
 
 .row {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
 }
 
@@ -175,7 +175,14 @@ html[data-theme="light"] .ai_strip {
 }
 
 /* Responsive */
-@media screen and (max-width: 1082px) {
+@media screen and (max-width: 1200px) {
+  .row {
+    grid-template-columns: 1fr 1fr;
+    gap: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
   .row {
     grid-template-columns: 1fr;
     gap: 1.5rem;
